improving the data export

--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -167,7 +167,7 @@
             <button class="btn btn-default btn-sm"
                     data-toggle="tooltip"
                     data-placement="top"
-                    ng-click="extra.export(element)"
+                    ng-click="extra.openExportModal(element)"
                     ng-disabled="extra.isExporting"
                     title='{{ i18n.__("Export") }}'>
               <span class="loading ng-hide" ng-show="extra.isExporting">
