improving the data export

--- a/webapp/views/configuration/projects.html
+++ b/webapp/views/configuration/projects.html
@@ -531,9 +531,7 @@
         <div class="modal-body">
 
 
-          <div>
-            
-          </div>
+          <div></div>
           <div>
             
           </div>
