--- a/webapp/views/configuration/projects.html
+++ b/webapp/views/configuration/projects.html
@@ -531,7 +531,9 @@
         <div class="modal-body">
 
 
-          <div></div>
+          <div>
+            
+          </div>
           <div>
             
           </div>
