--- a/webapp/public/javascripts/angular/data-series/templates/intersection.html
+++ b/webapp/public/javascripts/angular/data-series/templates/intersection.html
@@ -24,6 +24,24 @@
   </div>
 </div>
 
+<!-- Attributes modal -->
+<div class="modal fade" id="attributesModal" tabindex="-1" role="dialog" aria-labelledby="attributesModalLabel">
+  <div class="modal-dialog modal-md" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="attributesModalLabel">{{ i18n.__('Select Attibutes') }}</h4>
+      </div>
+      <div class="modal-body">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="row">
   <div class="col-md-12">
     <div class="col-md-12">
